--- a/MyProject/templates/mavzu.html
+++ b/MyProject/templates/mavzu.html
@@ -8,6 +8,7 @@
     <title>Mavzular Ro'yxati</title>
   </head>
   <body>
+    <h1>This is mavzular:</h1>
     <ul>
       {% for i in lessons %}
       <h2>{{ forloop.counter }}. {{ i.lesson_title }}</h2>
