--- a/Poytaxtar/templates/capitals_list.html
+++ b/Poytaxtar/templates/capitals_list.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <title></title>
     <style>
-    table,
-    th,
-    td {
-      border: 1px solid black;
-    }
-  </style>
-
+        table,
+        th,
+        td {
+          border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
-
 <div style="float: right">
         <button onclick="setLang('uz')">UZ</button>
         <button onclick="setLang('en')">EN</button>
         <button onclick="setLang('ru')">RU</button>
 </div>
+
 <table class="table", style="width: auto">
     <thead>
         <th>#</th>
@@ -26,29 +25,26 @@
         <th>Poytaxt</th>
     </thead>
     <tbody>
-        {% for capital in object_list %}
+        {% for capitals in object_list %}
             <tr>
                 <th>{{ forloop.counter }}</th>
-                <th>{{ capital.country }}</th>
-                <th>{{ capital.capital }}</th>
+                <td>{{ capitals.country }}</td>
+                <td>{{ capitals.capital }}</td>
             </tr>
         {% endfor %}
     </tbody>
-
-
-
 </table>
 <script>
-        function setLang(lang) {
-            const Http = new XMLHttpRequest();
-            const url='/setLang/' + lang;
-            Http.open("GET", url);
-            Http.send();
+    function setLang(lang) {
+        const Http = new XMLHttpRequest();
+        const url='/setLang/' + lang;
+        Http.open("GET", url);
+        Http.send();
 
-            Http.onreadystatechange = (e) => {
-                location.reload();
-            }
+        Http.onreadystatechange = (e) => {
+            location.reload();
         }
+    }
     </script>
 </body>
 </html>
