--- a/Exam/templates/cuisine/food.html
+++ b/Exam/templates/cuisine/food.html
@@ -18,7 +18,7 @@
     <script>
         function setLang(lang) {
             const Http = new XMLHttpRequest();
-            const url='/setLang/' + lang;
+            const url='/foods/setLang/' + lang;
             Http.open("GET", url);
             Http.send();
 
